--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-.* {
-  font-family: 'Times New Roman', Times, serif;
+* {
+  font-family: Helvetica, sans-serif;
 }
 
 #screen {
@@ -17,13 +17,27 @@
   width: 80vw;
   min-width: calc(120vh + 30px);
   height: 100px;
+  background: radial-gradient(circle farthest-corner, #70fbf2, #00b2d8);
   justify-content: center;
-  background-color:firebrick;
-  background-image: url('img/Monopoly_logo.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
   border-radius: 5px;
+}
+
+#titleImage {
+  background-image: url('img/MonopolyJunior_logo.png');
+  background-position: center;
+  background-size: 25vh;
+  background-repeat: no-repeat;
+  width: 30%;
+  margin: 0px -5vw;
+}
+
+.titleWord {
+  text-align: center;
+  font-size: 8vh;
+  font-weight: bold;
+  text-shadow: -1px 1px 5px black;
+  color: white;
+  width: 35%;
 }
 
 #main {
@@ -87,13 +101,27 @@
   align-items: center;
 }
 
+#whoMoves {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
+  padding-left: 10px;
+  margin-right: 5px;
+  width: 12%;
+  height: 30px;
+  background-color: white;
+  border: 1px solid gray;
+  border-radius: 5px; 
+}
+
 #question {
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: left;
   padding-left: 10px;
-  width: 50%;
+  width: 40%;
   height: 30px;
   background-color: white;
   border: 1px solid gray;
@@ -105,11 +133,22 @@
   height: 30px;
   border: 1px solid gray;
   border-radius: 5px;
-  background-color: lightgreen;
+  background: radial-gradient(circle farthest-corner at 0% 0%, rgba(63, 212, 138, 0.945), lightgreen);
   margin-left: 3%;
 }
 
+.btn:hover {
+  background: unset;
+  background-color:palegreen
+}
+
 #no {
+  background: radial-gradient(circle farthest-corner at 0% 0%, rgba(233, 17, 17, 0.507), rgba(255, 0, 0, 0.3));
+
+}
+
+#no:hover {
+  background: unset;
   background-color: rgba(255, 0, 0, 0.3);
 }
 
@@ -238,7 +277,11 @@
 /*Center*/
 
 .center {
-  background-color: burlywood;
+  background-position: center;
+  background-color: whitesmoke;
+  background-repeat: no-repeat;
+  background-image: url('img/Center.png');
+  background-size: 145%;
   width: 75%;
   height: 75%;
 }
@@ -254,21 +297,31 @@
   background-color: whitesmoke;
 }
 
-.desc {
+.color {
   display: flex;
   align-items: center;
-  justify-content: center;
+  font-size: small;
   width: 100%;
   height: 20%;
-  background-color: red;
 }
 
-.picture {
+.desc {
   display: flex;
+  text-align: center;
   align-items: center;
   justify-content: center;
   width: 90%;
   height: 50%;
+  font-size: 90%;
+}
+
+.owner {
+  width: 10px;
+  height: 10px;
+  margin-left: 5px;
+  background-color: white;
+  border: 1px solid gray;
+  border-radius: 6px;
 }
 
 .price {
@@ -277,7 +330,6 @@
   justify-content: space-around;
   width: 90%;
   height: 10%;
-  background-color: yellow;
 }
 
 .guests {
@@ -291,7 +343,7 @@
 .token {
   width: 16px;
   height: 16px;
-  margin-left: 10px;
+  margin: 0px 5px;
   border: 1px solid gray;
   border-radius: 9px;
 }
